--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
+# We will mount the code as a volume for development, 
+# but copying it here is good practice for the image build.
 COPY . .
 
-CMD ["python", "run.py"]
+CMD ["python", "app.py"]
