--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,19 @@ services:
       - "5000:5000"
     volumes:
       - ./backend:/app
+    environment:
+      - FLASK_ENV=development
+    restart: always
 
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "5173:5173"
     volumes:
       - ./frontend:/app
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
+    restart: always
